.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__XCDTabName__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>deprecated. Controls labels on XCD visualforce pages ,&apos;This feature is replaced by custom labels&apos;</description>
    <fields>
        <fullName>xcdhcm__Replacewith__c</fullName>
        <description>This text field used to hold the new TabName</description>
        <label>Replacewith</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Title_location__c</fullName>
        <label>Title location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>xXCDTabName</label>
    <listViews>
        <fullName>Available</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Title_location__c</columns>
        <columns>xcdhcm__Replacewith__c</columns>
        <columns>xcdhcm__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Available</label>
        <language>en_GB</language>
    </listViews>
</CustomObject>